[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-ncnn-collection"
version = "1.0.0"
description = "A curated collection of high-quality NCNN resources, projects, and implementations for mobile and edge AI deployment"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "ncnn",
    "neural-network",
    "mobile-ai",
    "edge-ai",
    "deep-learning",
    "inference",
    "yolo",
    "computer-vision",
    "awesome-list",
]
authors = [
    {name = "NCNN Community", email = "info@ncnn.dev"},
]
maintainers = [
    {name = "NCNN Community", email = "info@ncnn.dev"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "hatch>=1.9.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "coverage[toml]>=7.4.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "awesome-ncnn-collection[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/awesome-ncnn-collection"
Documentation = "https://github.com/umitkacar/awesome-ncnn-collection#readme"
Repository = "https://github.com/umitkacar/awesome-ncnn-collection"
"Bug Tracker" = "https://github.com/umitkacar/awesome-ncnn-collection/issues"
Changelog = "https://github.com/umitkacar/awesome-ncnn-collection/releases"

# ==============================================================================
# Hatch Configuration
# ==============================================================================

[tool.hatch.version]
path = "pyproject.toml"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.envs.default]
dependencies = [
    "hatch",
    "pre-commit",
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage[toml]",
]

[tool.hatch.envs.default.scripts]
# Quality checks
lint = "ruff check ."
format = "black ."
format-check = "black --check ."
type-check = "mypy ."
check = [
    "lint",
    "format-check",
    "type-check",
]

# Testing
test = "pytest {args}"
test-cov = "pytest --cov --cov-report=term-missing {args}"
test-parallel = "pytest -n auto {args}"
cov-report = "coverage report"
cov-html = "coverage html"

# All quality checks + tests
all = [
    "check",
    "test-cov",
]

# Pre-commit
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
pre-commit-update = "pre-commit autoupdate"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ==============================================================================
# Ruff Configuration - Fast Python Linter
# ==============================================================================

[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4

# Enable preview features
preview = true

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hatch",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable all rules by default, then ignore specific ones
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Implicit string concatenation (conflicts with formatter)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG",     # Allow unused function args in tests
    "FBT",     # Allow boolean positional values in tests
    "PLR2004", # Allow magic values in tests
    "S311",    # Allow pseudo-random generators in tests
]

[tool.ruff.lint.isort]
known-first-party = ["awesome_ncnn"]
force-single-line = false
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Black Configuration - Code Formatter
# ==============================================================================

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hatch
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants\.d
  | \.pyenv
  | \.pytest_cache
  | \.pytype
  | \.ruff_cache
  | \.tox
  | \.venv
  | \.vscode
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | site-packages
  | venv
)/
'''

# ==============================================================================
# MyPy Configuration - Static Type Checker
# ==============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Exclude directories
exclude = [
    "^build/",
    "^dist/",
    "^venv/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ==============================================================================
# Pytest Configuration - Testing Framework
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
xfail_strict = true

# ==============================================================================
# Coverage Configuration - Code Coverage
# ==============================================================================

[tool.coverage.run]
branch = true
parallel = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = ["."]
